Changelog
=========

4.8-dev - (unreleased)
----------------------

4.7 - (2013-03-19)
------------------
* Bug fix: Fixed the reference for local variable in create_locale.
  [prospchr fixes #14176]

4.6 - (2013-03-15)
------------------
* Bug fix: removed unnecessary spaces and tabs
  [ghicaale refs #13990]
* Bug fix: Changed the social buttons to load asynchronously on the pages.
  Now, the page shows an image which is activated by passing the mouse hover
  it.
  [prospchr fixes #13990]
* Upgrade step:
   1. ZMI->portal_quickinstaller
   2. Reinstall eea.socialmedia
* Bug fix: Uploaded the socialite.min.js instead of socialite.js
* Bug fix: Social media buttins are multilingual now.
  [prospchr fixes #13990]

4.5 - (2012-07-13)
------------------
* Bug Fix: Fixed i18n:domain in .pt
  [prospchr refs #5162]

4.4 - (2012-06-13)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Bug fix: fixed position of right align for documentActions
  [ichimdav #5150]
* Bug fix: Fix translation errors in eea.socialmedia
  [prospchr fixes #5159]

4.3 - (2012-04-27)
------------------
* Bug fix: Change the FB like button to appear in english
  [prospchr refs #5094]
* Change: Change code in eea.socialmedia to fix translation problem
  [prospchr refs #5159]

4.2 - (2012-04-27)
------------------
* Feature: Add new social network: tweeter,
  facebook like and share, google plus one
  [prospchr fixes #5094]
* Upgrade step:
    1. in plone site setup > upgrade eea.socialmedia
    2. Hide plone.abovecontenttitle.documentactions
  From viewlets.interfaces.IBelowContentBody
  using @@manage-viewlets
  [prospchr fixes #5094]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Bug fix: Added translation domain to ZCML files
  [voineali #4139]
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible release
  [ghicaale #4213]

0.2 (2010-09-21)
----------------